[package]
name = "wfwalk"
version = "0.1.0"
authors = ["George Madrid <gmadrid@gmail.com>"]
edition = "2018"

[dependencies]
alphavantage = "0.5.0"
clap = "2.32.0"
env_logger = "0.6.0"
error-chain = "0.12.0"
futures = "0.1.25"
log-derive = "0.2"
log = "0.4"
itertools = "0.8.0"
lazy_static = "1.3.0"
tokio = "0.1.16"
