[package]
name = "wfwalk"
version = "0.1.0"
authors = ["George Madrid <gmadrid@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.6"
clap = "2.32.0"
env_logger = "0.6.0"
error-chain = "0.12.0"
futures = "0.1.25"
hyper = "0.12.25"
hyper-tls = "0.3.1"
log-derive = "0.2"
log = "0.4"
itertools = "0.8.0"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
lazy_static = "1.3.0"
tokio = { version = "0.1.16", features = ["timer"] }
url = "1.7.2"